soup-xmlrpc: fix parsing of <methodCall> without <params>

If a method takes no parameters, you can leave out the <params>
section of <methodCall>, but soup_xmlrpc_parse_method_call() was
requiring it anyway.

Fix that and add some tests of parameter-less methods.

https://bugzilla.gnome.org/show_bug.cgi?id=671661